<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Greetings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="327dp"
        android:layout_height="205dp"
        android:contentDescription="@string/pictureDesc"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titleTV"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@id/titleTV"
        app:layout_constraintTop_toBottomOf="@+id/titleTV"
        app:layout_constraintVertical_bias="0.078"
        tools:src="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/startBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.63" />
</androidx.constraintlayout.widget.ConstraintLayout>